Ignore generated files in the outputs/ dir

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,20 @@ fp-info-cache
 /*-backups/*.zip
 /__pycache__/*.pyc
 /scripts/__pycache__/*.pyc
-/output/*.pdf
-/output/*.zip
+/outputs/*.pdf
+/outputs/*.zip
+/outputs/*.gbr
+/outputs/*.gm1
+/outputs/*-F_Cu.*
+/outputs/*-F_Mask.*
+/outputs/*-F_Paste.*
+/outputs/*-F_Silkscreen.*
+/outputs/*-B_Cu.*
+/outputs/*-B_Mask.*
+/outputs/*-B_Paste.*
+/outputs/*-B_Silkscreen.*
+/outputs/*-In*_Cu.*
+/outputs/*.drl
 /venv/
 /jlcpcb/
 /old/
